[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/player.gd" type="Script" id=1]
[ext_resource path="res://art/flesh_stick.png" type="Texture" id=2]
[ext_resource path="res://art/flesh_ball.png" type="Texture" id=3]
[ext_resource path="res://dev/temp_assets/splat.ogg" type="AudioStream" id=4]
[ext_resource path="res://dev/temp_assets/collide.ogg" type="AudioStream" id=5]
[ext_resource path="res://dev/temp_assets/roll.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[node name="PlayerJonebone" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
gamepad = 0

[node name="Ball" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="PogoStick" type="RayCast2D" parent="." index="1"]

enabled = true
exclude_parent = true
cast_to = Vector2( 64, 0 )
collision_mask = 1

[node name="flesh_stick" type="Sprite" parent="PogoStick" index="0"]

position = Vector2( 4.03035, 0 )
scale = Vector2( 0.03, 0.15 )
texture = ExtResource( 2 )
offset = Vector2( 350, 0 )

[node name="Tween" type="Tween" parent="PogoStick" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Sprite" type="Sprite" parent="." index="2"]

scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -80.0
margin_right = 40.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VelocityX" type="Label" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "X"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VelocityY" type="Label" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Y"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AngularVelocity" type="Label" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Angular"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Jump" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Jump"
area_mask = 1

[node name="Collide" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Collide"
area_mask = 1

[node name="Roll" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Roll"
area_mask = 1


